<resources>
    <string name="app_name">Iam Pirate Dice</string>
    <string name="base_plate">base_plate</string>
    <string name="base_arrow">arrow</string>
    <string name="ok">OK</string>
    <string name="title_menu_redesigned">Redesigned</string>
    <string name="title_menu_pro">Pro</string>
    <string name="title_menu_standard">Standard</string>
    <string name="title_menu_help">Help</string>
    <string name="title_menu_about">About</string>
    <string name="title_menu_exit">Exit</string>
    <string name="about_text">Iam Pirate Dice\nA dice implementation for turn based sea strategy games\nPage: https://github.com/raydac/AndroidPirateDice\nVersion: %s</string>
    <string name="help_text">Just touch the arrow center to start the dice. Enjoy the your game!</string>
</resources>